# ion

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
dev-docs/fluent/: pyfluent_driver_v0.md  pyfluent_driver_v0_status.md  pyfluent_runtime_driver_v1.md
docs/: README.de.md  README.ja.md  README.zh.md
src/ion/: __init__.py  cli.py  driver.py  home.py  logging_config.py  runner.py  server.py  session.py  session_store.py  store.py
src/ion/drivers/: __init__.py
src/ion/drivers/ansa/: __init__.py  driver.py  runtime.py
src/ion/drivers/comsol/: __init__.py  driver.py
src/ion/drivers/flotherm/: __init__.py  _helpers.py  driver.py
src/ion/drivers/fluent/: __init__.py  driver.py  queries.py  runtime.py
src/ion/drivers/matlab/: driver.py
src/ion/drivers/pybamm/: __init__.py  driver.py
tests/: test_cli.py  test_comsol_driver.py  test_connect.py  test_lint.py  test_logs.py  test_matlab_driver.py  test_run.py  test_store.py
tests/execution/: run_batch1.ps1  run_ex01.ps1  run_ex02.ps1  run_ex05.ps1  run_helpers.ps1
tests/execution/snippets/: 01_read_case.py
tests/fixtures/: pybamm_spm_good.py
