[project]
name = "ion-cli"
version = "0.1.0"
description = "The simulation runtime for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
fluent = ["ansys-fluent-core>=0.20"]
pybamm = ["pybamm>=24.1"]
all = ["ion-cli[fluent,pybamm]"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
ion = "ion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires solver packages installed"]

[tool.ruff]
target-version = "py310"
